add /tenants/users/fetch and /tenants/roles/fetch endpoints
